ci in travis (#1)
* test in ci

* add travis badge

* add coveralls

* move jest to dev dependencias

* add coveralls badge

--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "main": "src/main.js",
   "scripts": {
     "start": "node src/main.js",
-    "test": "jest"
+    "test": "jest",
+    "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "author": "Elias Boukamza",
   "license": "MIT",
   "dependencies": {
     "intl": "^1.2.5",
-    "jest": "^24.1.0",
     "pdfmake": "^0.1.40"
+  },
+  "devDependencies": {
+    "coveralls": "^3.0.3",
+    "jest": "^24.1.0"
   },
   "jest": {
     "testEnvironment": "node",
