install and run from npm

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "jest": {
     "testEnvironment": "node",
     "collectCoverage": true
+  },
+  "bin": {
+    "simple-facture": "./bin/simple-facture"
   }
 }
