--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "rollup-plugin-ts": "^3.0.2",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
-    "typescript": "4.5.5"
+    "typescript": "~4.7.4"
   },
   "workspaces": [
-    "simple-facture",
-    "simple-facture-core"
+    "cli",
+    "core",
+    "web"
   ]
 }
